@@ -7,6 +7,7 @@ After ZConfig 2.8.0 (unreleased)
 --------------------------------
 
 - Allow identical redefinition of ``%define`` names.
+- Added support for IPv6 addresses.
 
 
 ZConfig 2.8.0 (2010-04-13)
